--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
 
             <div class="mx-3 mb-4">
-                <input class="rounded-3" type="number" placeholder="Search Price">
-                <button class="btn btn-primary btn-sm">Search</button>
+                <input id="search-price" class="rounded-3" type="number" placeholder="Search Price">
+                <button id="btn-price" class="btn btn-primary btn-sm">Search</button>
             </div>
 
         </div>
@@ -88,7 +88,7 @@
         </div>
     </main>
 
-<script src="myApp.js"></script>
+<script src="/js/myApp.js"></script>
 </body>
 
 </html>
